UX: fix leave btn alignment mobile

--- a/assets/stylesheets/common/chat-browse.scss
+++ b/assets/stylesheets/common/chat-browse.scss
@@ -98,6 +98,7 @@
 
   .chat-channel-card {
     .chat-channel-card__leave-btn {
+      padding: 0;
       &:hover,
       &:focus {
         background: none;
